samples/_failures_safe/1761522182_ac9841_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_46ea58e2.c: In function ‘main’:
./samples/SAFE/__tmp_46ea58e2.c:164:9: error: expected expression at end of input
  164 |         if (
      |         ^~
./samples/SAFE/__tmp_46ea58e2.c:164:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_46ea58e2.c:164:9: error: expected declaration or statement at end of input
